--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@ $editor-sidebar-font-size: .9rem;
 $link-underline: false;
 
 $z-index-markdown-editor: 1;
+$z-index-flash: 2;
 $z-index-dragged: 2;
 $z-index-dropdown: 3;
 $z-index-modal-backdrop: 4;
